fix bg on safari mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,6 +4,7 @@
             background-size: cover;
             background-position: bottom center;
             background-attachment: fixed;
+            position: fixed;
 
             font-family: "Roboto", serif;
         }
